Fix double scrollbar bug

--- a/_sass/layouts/_gino.scss
+++ b/_sass/layouts/_gino.scss
@@ -31,7 +31,6 @@
   font-family: var(--sans);
   font-size: 14px;
   line-height: 1.6;
-  overflow-x: hidden;
   min-height: 100vh;
   position: relative;
 
